# libft

./: CMakeLists.txt  Makefile  ft_isalnum.c  ft_isalpha.c  ft_isprint.c  ft_isspace.c  ft_lstadd.c  ft_lstaddlast.c  ft_lstdel.c  ft_lstmap.c  ft_lstnew.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putnbr_fd.c  ft_putstr.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strrchr.c  ft_strrev.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  get_next_line.c  get_next_line.h  (+2 more)
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  libft_test
includes/: ft_string.h  libft.h  list.h
src/: ft_atof.c  ft_atoi.c  ft_bzero.c  ft_count_digits.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstdelone.c  ft_lstiter.c  ft_memalloc.c  ft_memccpy.c  ft_memcmp.c  ft_pow.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr_fd.c  ft_strcat.c  ft_strcpy.c  ft_string.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strsplitlst.c
test/: main.c  test.h  test_string.c  test_string2.c
